@@ -19,6 +19,7 @@
   new "mail_domain" server attribute (overrides --maildomain) (USC)
   configure fixes for linux x86_64 and tcl install weirdness (USC)
   extended mom parameter buffer space
+  change pbs_mkdirs to use standard var names so that chroot installs work better (USC)
  
 2.0.0p5
 
